<resources>
    <string name="app_name">Tienda_Online</string>
    <string name="bt1">Productos</string>
    <string name="bt2">Formulario</string>
    <string name="bt3">Integrantes</string>
    <string name="titulo">Ingreso de producto</string>
    <string name="f1">Ingresar</string>
    <string name="f2">Actualizar</string>
    <string name="f3">Eliminar</string>
    <string name="f4">Ver Registro</string>

    <string name="i1">Josué Amílcar López Benítez</string>
    <string name="i2">Josué Esaú Batres Guardado</string>
    <string name="i3">Oscar Daniel Benítez Blanco</string>
    <string name="i4">Andy Rodrigo Sorto Castillo</string>
</resources>