<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Integrantes"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="75dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i1"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="20sp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i2"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="20sp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i3"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="20sp"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i4"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="10sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="80dp"
        android:background="#05136C"
        android:onClick="inicio"
        android:text="Regresar"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:backgroundTint="#05136C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>