<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:srcCompat="@drawable/ugb"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"/>


        <Button
            android:id="@+id/btnProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@drawable/btn_uno"
            android:text="@string/bt1"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="#0288D1" />

        <Button
            android:id="@+id/btnFormulario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@drawable/btn_uno"
            android:text="@string/bt2"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="#0288D1" />

        <Button
            android:id="@+id/btnint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_uno"
            android:clickable="true"
            android:text="@string/bt3"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="#303F9F" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>