<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Formulario">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/boogaloo"
        android:text="@string/titulo"
        android:textColor="#423F4A"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="50dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Codigo:"
            android:textColor="#061A93"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/idproducto"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/btn_uno"
            android:hint="Ingrese el codigo"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="#514B46"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:text="Nombre:"
            android:textColor="#061A93"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/btn_uno"
            android:hint="Nombre del producto"
            android:inputType="textPersonName|textCapWords"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="#514B46"
            android:textSize="17dp" />


        <TextView
            android:id="@+id/txt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:text="Precio:"
            android:textColor="#061A93"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/precio"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/btn_uno"
            android:hint="Precio unitario"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="#514B46"
            android:textSize="17dp" />

        <Button
            android:id="@+id/btnInsert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="#A10303"
            android:text="@string/f1"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="#cf2D03" />

        <Button
            android:id="@+id/btnActualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="#A10303"
            android:text="@string/f2"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:backgroundTint="#cf2D03" />

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="#A10303"
            android:text="@string/f3"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:backgroundTint="#cf2D03" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#A10303"
            android:contextClickable="true"
            android:onClick="v1"
            android:text="Registros"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="#A10303" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>